# Cloth-Simulation

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: Application.cpp  Application.h  Buffers.cpp  Buffers.h  Camera.h  ClothCompute.comp  ClothNormals.comp  ClothNormals.spv  ClothRender.frag  ClothRender.vert  FileExplorer.cpp  FileExplorer.h  Shader.cpp  Shader.h  Shading.cpp  Shading.h  Texture2D.cpp  Texture2D.h  basicshader.frag  basicshader.vert  main.cpp  trapezoid_step2.comp  trapezoid_step3.comp
src/shaders/: ClothCompute.comp  ClothRender.frag  ClothRender.vert  NormalShader.frag  NormalShader.geo  NormalShader.vert  ShadowDepthShader.frag  ShadowDepthShader.vert  trapezoid_step1.comp
